2010-03-16  Jakub Wieczorek  <jwieczorek@webkit.org>

Reviewed by Eric Seidel.

        [Qt] MediaPlayerPrivate: Initialize m_mediaPlayerControl to 0 to
        avoid crashes when no media services can be found.

        https://bugs.webkit.org/show_bug.cgi?id=36142

        * platform/graphics/qt/MediaPlayerPrivateQt.cpp:
        (WebCore::MediaPlayerPrivate::MediaPlayerPrivate):

Canonical link: https://commits.webkit.org/47360@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@56065 268f45cc-cd09-0410-ab3c-d52691b4dbfc